--- a/es6/index.html
+++ b/es6/index.html
@@ -15,6 +15,7 @@
       -moz-osx-font-smoothing: grayscale;
     }
   </style>
+  <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
   <script src="/bundle.js"></script>
